Aggiorna il README e il sitemap.xml per riflettere il nuovo dominio e migliorare la struttura del sitemap

--- a/nginx/README
+++ b/nginx/README
@@ -1,4 +1,4 @@
-# Gen-ia (genialabile.com) Project
+# genialabile.com (Gen-ia) Project
 
 ## Overview
 This project, **Gen-IA**, is a minimal and professional website designed to inspire multidimensional solutions and unlock creative potential.
